--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
     name: quiz-app
+
   # ---------- MySQL ----------
   datasource:
     url: jdbc:mysql://localhost:3306/preguntas_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
@@ -12,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQLDialect # Fuerza el dialecto aquí
+    database-platform: org.hibernate.dialect.MySQLDialect
     properties:
       hibernate:
         format_sql: true
@@ -21,6 +22,18 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/preguntas_mongo_db
+
+# ---------- Swagger / OpenAPI CONFIG ----------
+# Acceso: http://localhost:8080/swagger-ui.html
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    operations-sorter: alpha
+    tags-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  # Útil si después añades Spring Actuator
+  show-actuator: true
 
 # --- Tu secreto JWT ---
 jwt:
