--- a/backend/database/docker-compose.yml
+++ b/backend/database/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+      # Mapeo exclusivo para cargar las 50 preguntas automáticamente
+      - ./database/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
 
 volumes:
   mysql_data:
